--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start:nodemon": "nodemon app.js"
+    "nodemon": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
